--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
     },
     "dependencies": {
-      "next": "latest",
-      "react": "latest",
-      "react-dom": "latest",
-      "formidable": "^2.0.1",
-      "form-data": "^4.0.0",
-      "node-fetch": "^2.6.1"
+        "form-data": "^4.0.2",
+        "formidable": "^2.0.1",
+        "next": "^15.2.0",
+        "node-fetch": "^2.6.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
     }
-  }
-  
+}
